Changelog
=========

1.0.1 (unreleased)
------------------

- Nothing changed yet.


1.0 (2012-03-19)
----------------

- Initial release
