@@ -1,18 +1,18 @@
 from plone.portlets.interfaces import IPortletDataProvider
 from plone.app.portlets.portlets import base
-from plone.app.portlets.cache import render_cachekey
 from plone.memoize.compress import xhtml_compress
 from zope.interface import implements
 from plone.registry.interfaces import IRegistry
 from Products.Five.browser.pagetemplatefile import ViewPageTemplateFile
 from datetime import datetime
 from zope.component import getUtility
-
 from ftw.portlet.clock import _
 
+
 class IClockPortlet(IPortletDataProvider):
+    """ Clock portlet Interface
     """
-    """
+
 
 class Assignment(base.Assignment):
     implements(IClockPortlet)
@@ -24,8 +24,6 @@ class Assignment(base.Assignment):
     def title(self):
         return _(u"SBB Clock")
 
-def _render_cachekey(fun, self):
-    return render_cachekey(fun, self)
 
 class Renderer(base.Renderer):
     _template = ViewPageTemplateFile('portlet.pt')
@@ -42,10 +40,11 @@ class Renderer(base.Renderer):
     def getDate(self):
         return datetime.now().strftime("%d.%m.%Y")
 
-
     def render(self):
         return xhtml_compress(self._template())
 
+
 class AddForm(base.NullAddForm):
+
     def create(self):
         return Assignment()
