@@ -1,15 +1,5 @@
 [buildout]
 extends =
-    https://hudson:hudson@svn.4teamwork.ch/repos/hudson/test-cfgs/plone-4.1.x.cfg
+    https://raw.github.com/4teamwork/ftw-buildouts/master/test-plone-4.1.x.cfg
 
 package-name = ftw.portlet.clock
-
-
-[test]
-defaults = ['-s', '${buildout:package-name}', '--xml', '--exit-with-status', '--auto-color', '--auto-progress', '--coverage=${buildout:directory}/coverage/text']
-
-
-[coverage-report]
-arguments = ('coverage/text', 'coverage/html')
-
-
