@@ -4,7 +4,8 @@ Changelog
 1.0.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Updated buildout config.
+  [mathias.leimgruber]
 
 
 1.0 (2012-03-19)
